fix: enforce CORS origins from properties and disable CSRF